--- a/content/contributions/reproductions.tex
+++ b/content/contributions/reproductions.tex
@@ -1,9 +1,6 @@
 \begin{frame}{Contribution 2: Model Reproduction}
-    \begin{block}{Compare Models from the literature for a clinical setting}
-        \begin{itemize}
-            \item Reproduce models
-            \item Compare random vs. patient-wise split
-        \end{itemize}
+    \begin{block}{Objective}
+        Reproduce and evaluate models from the literature from a concrete clinical perspective.
     \end{block}
 \end{frame}
 
@@ -52,9 +49,10 @@
 
 \begin{frame}{Contribution 2: Model Reproduction}{Schrumpf et al.}
     \begin{figure}
-        \includegraphics[width=0.45\columnwidth]{reproductions/alex.png}
-        \hfill
-        \includegraphics[width=0.45\columnwidth]{reproductions/resnet.png}
+        \centering
+        \includegraphics[width=0.35\columnwidth]{reproductions/alex.png}
+        % \hfill
+        \includegraphics[width=0.35\columnwidth]{reproductions/resnet.png}
     \end{figure}
     ResNet34
 \end{frame}
