--- a/content/contributions/survey.tex
+++ b/content/contributions/survey.tex
@@ -1,15 +1,10 @@
 \begin{frame}{Contribution 1: Survey}
-    \begin{block}{Perform a survey for ML-BP estimation}
-        \begin{itemize}
-            \item Collect articles
-            \item Annotate articles
-            \item Extract statistics
-            \item Find candidate architectures
-        \end{itemize}
+    \begin{block}{Objective}
+        We first provide a comprehensive review of the literature through a survey.
     \end{block}
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}{Collect articles}
+\begin{frame}{Contribution 1: Survey}{Methodology}
     \begin{columns}
         \column{0.5\textwidth}
         Search Engines (3)
@@ -40,7 +35,7 @@
     \alert{50 articles, 176 models}
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}{Annotate articles}
+\begin{frame}{Contribution 1: Survey}{Methodology}
     \begin{itemize}
         \item Dataset
         \item Preprocessing
@@ -51,20 +46,19 @@
     \href{https://docs.google.com/spreadsheets/u/1/d/e/2PACX-1vR-3MoAcaD-N30ZM15ozSlxh8RHTUBv2KETb9f2g852htlH-5PNt_S8khVnUFLWeEo2H91ZW9hCEi8o/pubhtml}{published online for viewing}
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}
-    \framesubtitle{Extract Statistics}
+\begin{frame}{Contribution 1: Survey}{Results}
     \centering
     \includesvg[scale=0.6]{survey/Taxonomy.drawio.svg}
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}{Extract statistics}
+\begin{frame}{Contribution 1: Survey}{Results}
     Methods
     \begin{figure}
-        \includesvg[width=0.33\columnwidth]{survey/layers.svg}
+        \includesvg[width=0.3\columnwidth]{survey/layers.svg}
         \hfill
-        \includesvg[width=0.33\columnwidth]{survey/input.svg}
+        \includesvg[width=0.3\columnwidth]{survey/input.svg}
         \hfill
-        \includesvg[width=0.33\columnwidth]{survey/algorithm.svg}
+        \includesvg[width=0.3\columnwidth]{survey/algorithm.svg}
     \end{figure}
     \begin{itemize}
         \item PPG
@@ -73,7 +67,7 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}{Extract statistics}
+\begin{frame}{Contribution 1: Survey}{Results}
     Years
     \begin{columns}
         \column{0.7\columnwidth}
@@ -90,7 +84,7 @@
 
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}{Extract statistics}
+\begin{frame}{Contribution 1: Survey}{Results}
     Reported Performance
 
     \begin{figure}
@@ -105,7 +99,7 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}{Find candidate architectures}
+\begin{frame}{Contribution 1: Survey}{Results}
     Filter articles based on annotations
     \begin{itemize}
         \item PPG Only
@@ -118,7 +112,7 @@
     \alert{8 articles, 9 models}
 \end{frame}
 
-\begin{frame}{Contribution 1: Survey}{Find candidate architectures}
+\begin{frame}{Contribution 1: Survey}{Results}
     \begin{table}
         \centering
         \tiny
