--- a/presentation.tex
+++ b/presentation.tex
@@ -5,9 +5,8 @@
 \usepackage{siunitx}
 \usepackage{booktabs}
 \usepackage[normalem]{ulem}
-\graphicspath{ {./graphics/} }
+\graphicspath{ {./graphics/}{./Pictures/} }
 \usetheme{Madrid}
-\graphicspath{ {Pictures/} }
 \definecolor{lightblue}{RGB}{0,73,114}
 \definecolor{grund}{RGB}{238,241,251}          
 \definecolor{schrift}{RGB}{0,73,114}
@@ -32,20 +31,25 @@
     \end{frame}
 }
 
-
 \frame{\titlepage}
 
 % IMPACK CPR
 % It's an ML regerssion task
 % explain random vs patient-wise split
-% Training settings
+% Training settings+
 
-\section{Intro}
+\section{Introduction}
 
 \section{Contributions}
 \input{content/contributions.tex}
 
+\section{Future Work}
+\input{content/futurework.tex}
+
 \input{content/references.tex}
+
+
+\input{content/supplemental.tex}
 
 % supplemental slides tables of results
 
