--- a/content/contributions/lcanalysis.tex
+++ b/content/contributions/lcanalysis.tex
@@ -1,13 +1,10 @@
-\begin{frame}{Contribution 5: Learning Curve Analysis}
-    \begin{block}{Estimate the amount of data required to achieve AAMI performance}
-        \begin{itemize}
-            \item Methodology
-            \item Results
-        \end{itemize}
+\begin{frame}{Contribution 4: Learning Curve Analysis}
+    \begin{block}{Objective}
+        Evaluate how much data is required to achieve a calibration-free BP estimation algorithms.
     \end{block}
 \end{frame}
 
-\begin{frame}{Contribution 5: Learning Curve Analysis}{Methodology}
+\begin{frame}{Contribution 4: Learning Curve Analysis}{Methodology}
     \begin{figure}
         \includesvg[width=\columnwidth]{lcanalysis/lc analysis split.svg}
     \end{figure}
@@ -17,7 +14,7 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Contribution 5: Learning Curve Analysis}{Results}
+\begin{frame}{Contribution 4: Learning Curve Analysis}{Results}
     \begin{figure}[htbp]
         \includesvg[width=0.45\columnwidth]{lcanalysis/lc analysis SBP MAE.svg}
         \hfill
@@ -31,13 +28,13 @@
 \end{frame}
 
 
-\begin{frame}{Contribution 5: Learning Curve Analysis}{Results}
+\begin{frame}{Contribution 4: Learning Curve Analysis}{Results}
 
     \begin{equation}\label{eq:fitted curve}
         y=\num{28.533} - \num{9.518} x^{\num{0.295}}
     \end{equation}
     \begin{figure}[htbp]
-        \includesvg[width=0.7\columnwidth]{lcanalysis/fitted model.svg}
+        \includesvg[width=0.6\columnwidth]{lcanalysis/fitted model.svg}
     \end{figure}
 
     \pause
@@ -47,5 +44,10 @@
     \end{itemize}
 \end{frame}
 
+\begin{frame}{Contribution 4}{Results}
+    \begin{block}{Main Finding \#2}
+        Improvements in data are more effective at improving performance for non-invasive blood pressure monitoring.
+    \end{block}
+\end{frame}
 
 
