--- a/presentation.tex
+++ b/presentation.tex
@@ -6,6 +6,7 @@
 \usepackage{booktabs}
 \usepackage[normalem]{ulem}
 \usepackage{pifont}
+\usepackage[export]{adjustbox}
 \graphicspath{ {./graphics/}{./Pictures/} }
 \usetheme{Madrid}
 \definecolor{lightblue}{RGB}{0,73,114}
