--- a/content/contributions/lcanalysis.tex
+++ b/content/contributions/lcanalysis.tex
@@ -6,7 +6,7 @@
 
 \begin{frame}{Contribution 4: Learning Curve Analysis}{Methodology}
     \begin{figure}
-        \includesvg[width=\columnwidth]{lcanalysis/lc analysis split.svg}
+        \includesvg[width=0.8\columnwidth]{lcanalysis/lc analysis split.svg}
     \end{figure}
     \begin{itemize}
         \item MLP Model
@@ -16,13 +16,11 @@
 
 \begin{frame}{Contribution 4: Learning Curve Analysis}{Results}
     \begin{figure}[htbp]
-        \includesvg[width=0.45\columnwidth]{lcanalysis/lc analysis SBP MAE.svg}
-        \hfill
-        \includesvg[width=0.45\columnwidth]{lcanalysis/lc analysis SBP SD.svg}
+        \includesvg[width=0.43\columnwidth]{lcanalysis/lc analysis SBP MAE.svg}
+        \includesvg[width=0.43\columnwidth]{lcanalysis/lc analysis SBP SD.svg}
 
-        \includesvg[width=0.45\columnwidth]{lcanalysis/lc analysis DBP MAE.svg}
-        \hfill
-        \includesvg[width=0.45\columnwidth]{lcanalysis/lc analysis DBP SD.svg}
+        \includesvg[width=0.43\columnwidth]{lcanalysis/lc analysis DBP MAE.svg}
+        \includesvg[width=0.43\columnwidth]{lcanalysis/lc analysis DBP SD.svg}
     \end{figure}
     Improvement for SBP MAE only
 \end{frame}
