--- a/content/contributions/reproductions.tex
+++ b/content/contributions/reproductions.tex
@@ -19,7 +19,7 @@
 
 \begin{frame}{Contribution 2: Model Reproduction}{Chen et al.}
     \begin{figure}
-        \includegraphics[width=\columnwidth]{reproductions/chen.png}
+        \includegraphics[width=0.8\columnwidth]{reproductions/chen.png}
     \end{figure}
 \end{frame}
 
@@ -50,9 +50,9 @@
 \begin{frame}{Contribution 2: Model Reproduction}{Schrumpf et al.}
     \begin{figure}
         \centering
-        \includegraphics[width=0.35\columnwidth]{reproductions/alex.png}
+        \includegraphics[width=0.3\columnwidth]{reproductions/alex.png}
         % \hfill
-        \includegraphics[width=0.35\columnwidth]{reproductions/resnet.png}
+        \includegraphics[width=0.3\columnwidth]{reproductions/resnet.png}
     \end{figure}
     ResNet34
 \end{frame}
