add some images and rounde image corners when relevant

--- a/content/contributions/models.tex
+++ b/content/contributions/models.tex
@@ -260,7 +260,7 @@
     \end{table}
     \begin{itemize}
         \item Train-test gap much larger for patient-wise
-        \item Sign of Overfitting
+        \item Sign of overfitting
     \end{itemize}
 \end{frame}
 
@@ -307,7 +307,7 @@
     \begin{itemize}
         \item \sout{Increase complexity}
         \item \sout{Increase regularization}
-        \item Increase Data
+        \item Increase data
     \end{itemize}
 \end{frame}
 
