--- a/content/contributions/survey.tex
+++ b/content/contributions/survey.tex
@@ -37,28 +37,35 @@
 
 \begin{frame}{Contribution 1: Survey}{Methodology}
     \begin{itemize}
-        \item Dataset
-        \item Preprocessing
-        \item Model architecture
-        \item Performance
+        \item Annotate articles
+              \begin{itemize}
+                  \item Dataset
+                  \item Preprocessing
+                  \item Model architecture
+                  \item Performance
+                  \item etc.
+              \end{itemize}
+        \item Extract statistics
     \end{itemize}
     \includegraphics[width=\textwidth]{survey/bigtable.png}
     \href{https://docs.google.com/spreadsheets/u/1/d/e/2PACX-1vR-3MoAcaD-N30ZM15ozSlxh8RHTUBv2KETb9f2g852htlH-5PNt_S8khVnUFLWeEo2H91ZW9hCEi8o/pubhtml}{published online for viewing}
 \end{frame}
 
 \begin{frame}{Contribution 1: Survey}{Results}
-    \centering
-    \includesvg[scale=0.6]{survey/Taxonomy.drawio.svg}
+    Taxonomy of approaches
+    \begin{figure}
+        \includesvg[scale=0.6]{survey/Taxonomy.drawio.svg}
+    \end{figure}
 \end{frame}
 
 \begin{frame}{Contribution 1: Survey}{Results}
     Methods
     \begin{figure}
-        \includesvg[width=0.3\columnwidth]{survey/layers.svg}
-        \hfill
         \includesvg[width=0.3\columnwidth]{survey/input.svg}
         \hfill
         \includesvg[width=0.3\columnwidth]{survey/algorithm.svg}
+        \hfill
+        \includesvg[width=0.3\columnwidth]{survey/layers.svg}
     \end{figure}
     \begin{itemize}
         \item PPG
