--- a/content/literaturereview.tex
+++ b/content/literaturereview.tex
@@ -48,12 +48,12 @@
     \begin{table}
         \begin{tabular}{r c c c}
             \hline
-                           & non-invasive & continuous & calibration-free \\
+                             & non-invasive & continuous & calibration-free \\
             \hline
-            cuff-based     & \cmark       & \xmark     & \cmark           \\
-            catheter       & \xmark       & \cmark     & \cmark           \\
-            ML w/ pers.    & \cmark       & \cmark     & \xmark           \\
-            desired system & \cmark       & \cmark     & \cmark           \\
+            cuff-based       & \cmark       & \xmark     & \cmark           \\
+            catheter         & \xmark       & \cmark     & \cmark           \\
+            ML w/ pers.      & \cmark       & \cmark     & \xmark           \\
+            desired solution & \cmark       & \cmark     & \cmark           \\
             \hline
         \end{tabular}
     \end{table}
