--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -44,7 +44,7 @@
         EMS
         \begin{figure}
             \centering
-            \includegraphics[width=\columnwidth]{introduction/ems.jpg}
+            \includegraphics[width=\columnwidth]{introduction/ems.png}
         \end{figure}
     \end{columns}
 \end{frame}
@@ -53,12 +53,12 @@
     \begin{columns}
         \column{0.5\columnwidth}
         \begin{itemize}
-            \item IMPACK CPR
+            \item IMPACK CPR \includegraphics[height=2\fontcharht\font`\B]{introduction/impack.png}
             \item Chest Compression Device
             \item Feedback loop with vital signs
         \end{itemize}
         \begin{figure}
-            \includegraphics[width=\columnwidth]{introduction/massseur.jpeg}
+            \includegraphics[width=\columnwidth]{introduction/masseur.png}
         \end{figure}
 
         \column{0.5\columnwidth}
@@ -76,7 +76,7 @@
         \centering
         Cuff-based
         \begin{figure}
-            \includegraphics[width=\columnwidth]{introduction/cuff.jpg}
+            \includegraphics[width=\columnwidth]{introduction/cuff.png}
         \end{figure}
         % \begin{itemize}
         %     \item + non-invasive
@@ -87,7 +87,7 @@
         \centering
         Catheterization
         \begin{figure}
-            \includegraphics[width=\columnwidth]{introduction/catheter.jpeg}
+            \includegraphics[width=\columnwidth]{introduction/catheter.png}
         \end{figure}
         % \begin{itemize}
         %     \item - invasive
@@ -115,7 +115,7 @@
             \hline
             cuff-based     & \cmark       & \xmark     \\
             catheter       & \xmark       & \cmark     \\
-            desired system & \cmark       & \cmark     \\
+            desired solution & \cmark       & \cmark     \\
             \hline
         \end{tabular}
     \end{table}
