--- a/content/contributions/lcanalysis.tex
+++ b/content/contributions/lcanalysis.tex
@@ -27,7 +27,7 @@
 
 
 \begin{frame}{Contribution 4: Learning Curve Analysis}{Results}
-
+    Power model
     \begin{equation}\label{eq:fitted curve}
         y=\num{28.533} - \num{9.518} x^{\num{0.295}}
     \end{equation}
