--- a/content/futurework.tex
+++ b/content/futurework.tex
@@ -2,8 +2,8 @@
     \begin{itemize}
         \item Multiple Sensors
               \begin{itemize}
-                  \item PPG: PTT
-                  \item ECG: PAT
+                  \item PPG, PPG $\to$ PTT
+                  \item PPG, ECG $\to$ PAT
               \end{itemize}
         \item Demographic information
         \item Acquire more data
