--- a/presentation.tex
+++ b/presentation.tex
@@ -7,6 +7,7 @@
 \usepackage[normalem]{ulem}
 \usepackage{pifont}
 \usepackage[export]{adjustbox}
+\usepackage{subcaption}
 \graphicspath{ {./graphics/}{./Pictures/} }
 \usetheme{Madrid}
 \definecolor{lightblue}{RGB}{0,73,114}
