--- a/content/contributions/reproductions.tex
+++ b/content/contributions/reproductions.tex
@@ -6,7 +6,7 @@
 
 \begin{frame}{Contribution 2: Model Reproduction}{Slapničar et al.}
     \begin{figure}
-        \includegraphics[width=0.8\textheight]{reproductions/slapnicar.png}
+        \includegraphics[width=\textheight]{reproductions/slapnicar.png}
     \end{figure}
     PPG Only
 \end{frame}
