--- a/content/contributions/survey.tex
+++ b/content/contributions/survey.tex
@@ -107,6 +107,7 @@
 \end{frame}
 
 \begin{frame}{Contribution 1: Survey}{Results}
+    % TODO move right
     Filter articles based on annotations
     \begin{itemize}
         \item PPG Only
