update results images

--- a/presentation.tex
+++ b/presentation.tex
@@ -14,8 +14,12 @@
 \definecolor{grund}{RGB}{238,241,251}          
 \definecolor{schrift}{RGB}{0,73,114}
 \definecolor{magenta}{RGB}{128,0,128}
-\definecolor{maroon}{RGB}{113, 41, 21  }
-\setbeamercolor{structure}{fg=maroon}
+\definecolor{maroon}{RGB}{113, 41, 21}
+\definecolor{burgundy}{RGB}{128, 0, 32}
+\definecolor{concordia}{RGB}{147, 35, 57}
+\definecolor{concordia2}{RGB}{147, 0, 44}
+\definecolor{concordia3}{RGB}{145, 35, 56}
+\setbeamercolor{structure}{fg=concordia3}
 
 \newcommand*{\thead}[1]{\multicolumn{1}{c}{#1}}
 \newcommand{\cmark}{\ding{51}}
