Supervisor's review fixes

--- a/content/contributions/survey.tex
+++ b/content/contributions/survey.tex
@@ -12,6 +12,8 @@
             \item Google Scholar
             \item PubMed's search engine
             \item Sofia
+            \item IEEE
+            \item SCOPUS
         \end{itemize}
 
         \column{0.5\textwidth}
