--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -13,7 +13,7 @@
 
             \item Monitoring
                   \begin{itemize}
-                      \item Intraoperative care
+                      \item Perioperative care
                       \item Hypotension \& Hypertension
                   \end{itemize}
         \end{itemize}
@@ -111,10 +111,10 @@
     \begin{table}
         \begin{tabular}{r c c}
             \hline
-                           & non-invasive & continuous \\
+                             & non-invasive & continuous \\
             \hline
-            cuff-based     & \cmark       & \xmark     \\
-            catheter       & \xmark       & \cmark     \\
+            cuff-based       & \cmark       & \xmark     \\
+            catheter         & \xmark       & \cmark     \\
             desired solution & \cmark       & \cmark     \\
             \hline
         \end{tabular}
