--- a/presentation.tex
+++ b/presentation.tex
@@ -35,7 +35,7 @@
 \AtBeginSection[]
 {
     \begin{frame}
-        \frametitle{Table of Contents}
+        \frametitle{Table of Content}
         \tableofcontents[currentsection]
     \end{frame}
 }
